--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,7 @@ input {
     width: 400px;
     height: 26px;
     border: 1px solid white;
+    margin-right: 10px;
 }
 
 button {
@@ -24,5 +25,4 @@ button {
     width: 120px;
     height: 30px;
     border: 1px solid white;
-    margin-left: 10px;
 }
