--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -5,28 +5,22 @@
 
 * {
     font-family: UniversCondensed;
+    font-size: 14px;  
+    font-size-adjust: 0.5;
+}
+
+h1 {
+    font-size: 28px;
 }
 
 body {
     background-color: #000000;
     color           : #FFFFFF;
     height: 100%;
-    background-image: url("./images/background.jpeg");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background: url("./images/background.jpeg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-}
-
-.content {
-    background-color: #000000;
-    width : 800px;
-    height: auto;
-    border: 1px solid white;
-    padding: 20px;
-    margin: auto;
-    margin-top: 120px;
 }
 
 .overlay {
@@ -40,30 +34,40 @@ body {
     background: rgba(0, 0, 0, 0.5);
 }
 
-input {
-    outline-color   : #FFFFFF;
-    color           : #FFFFFF;
+.content {
     background-color: #000000;
-    width : 500px;
-    height: 26px;
-    border: 1px solid white;
-    padding-left: 10px;
-}
-
-.control-panel {
-    position: fixed;
-    position: 100,100;
-    outline-color   : #FFFFFF;
-    color           : #FFFFFF;
-    background-color: #000000;
-    border: 1px solid white;
+    width : 700px;
+    height: auto;
     padding: 20px;
-    bottom: 20px;
-    left: 20px;
+    margin: auto;
+    margin-top: 120px;
 }
 
-form {
-    margin: auto;
+input {
+    color           : #FFFFFF;
+    background-color: #000000;
+    width: 100%;
+    height: 26px;
+    border: 0;
+    outline: 0;
+    border-bottom: 1px solid white;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.search-button {
+    float: left;
+}
+
+.search-wrapper {
+    overflow: hidden;
+    padding-left: 0.5em;
+    margin-right: 30px;
+}
+
+.outline {
+    outline-color   : #FFFFFF;
+    border: 1px solid white;
 }
 
 input:disabled {
@@ -72,12 +76,12 @@ input:disabled {
 }
 
 button {
+    color: #FFFFFF;
     background-color: #000000;
-    color           : #FFFFFF;
-    width : 120px;
     height: 30px;
-    border: 1px solid white;
     transition: all .25s ease 0s;
+    outline: 0;
+    border: 0;
     -moz-transition   : all .25s ease 0s;
     -webkit-transition: all .25s ease 0s;
     -o-transition     : all .25s ease 0s;
@@ -91,4 +95,23 @@ button:hover:enabled {
 button:disabled {
     color: #777777;
     border-color: #777777;
+}
+
+.spinner {
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.control-panel {
+    position: fixed;
+    position: 100,100;
+    color           : #FFFFFF;
+    background-color: #000000;
+    padding: 20px;
+    bottom: 20px;
+    left: 20px;
 }
