Added mix to separate content box

--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -5,7 +5,7 @@
 
 * {
     font-family: UniversCondensed;
-    font-size: 14px;  
+    font-size: 16px;  
     font-size-adjust: 0.5;
 }
 
@@ -36,11 +36,21 @@ body {
 
 .content {
     background-color: #000000;
-    width : 700px;
+    width : 600px;
     height: auto;
-    padding: 20px;
     margin: auto;
-    margin-top: 120px;
+    margin-top: 100px;
+    padding: 40px;
+}
+
+.mix-box {
+    background-color: #000000;
+    width : 600px;
+    height: auto;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    padding: 40px;
 }
 
 input {
