Bugfixes and error handling

--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -126,3 +126,29 @@ button:disabled {
     bottom: 20px;
     left: 20px;
 }
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #777777;
+}
+
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #777777;
+   opacity:  1;
+}
+
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #777777;
+   opacity:  1;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #777777;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+   color:    #777777;
+}
+
+::placeholder { /* Most modern browsers support this now. */
+   color:    #777777;
+}
