--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -17,6 +17,12 @@ h2 {
     font-size: 22px;
 }
 
+.error {
+    color: #777777;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
 body {
     background-color: #000000;
     color           : #FFFFFF;
