Fixed scrolling on info page

--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -225,7 +225,7 @@ button:disabled {
 }
 
 .info {
-    position: fixed;
+    position: absolute;
     width: 25%;
     color: #FFFFFF;
     background-color: #000000;
