--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -29,6 +29,12 @@ body {
     -o-background-size: cover;
 }
 
+.container {
+    margin: auto;
+    width: 700px;
+    min-width: 500px;
+}
+
 h1 {
     font-family: UniversCondensed;
     font-size-adjust: 0.5;
@@ -318,8 +324,12 @@ a:hover {
 .col-11 { width: 91.66%; }
 .col-12 { width: 100%;   }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 700px) {
     [class*="col-"] {
         width: 100%;
+    }
+    .container {
+        width: 100%;
+        min-width: 500px;
     }
 }
