Used React contexts to disable create playlist button

--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -11,6 +11,9 @@
     letter-spacing: .05px;
     overflow-y: visible;
     box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-shadow: rgba(0,0,0,.01) 0 0 1px;
 }
 
 html {
