--- a/src/index.css
+++ b/src/index.css
@@ -70,13 +70,14 @@ h2 {
 /* Transition */
 .fade-enter {
   opacity: 0;
-  margin-top: 1.6rem;
+  margin-top: 4.8rem;
 }
 
 .fade-enter-active {
   opacity: 1;
   margin-top: 0;
-  transition: all 400ms ease-in-out;
+  transition: all 500ms ease-out;
+  z-index: 1;
 }
 
 .fade-exit {
@@ -86,6 +87,7 @@ h2 {
 
 .fade-exit-active {
   opacity: 0;
-  margin-top: 1.6rem;
-  transition: all 400ms ease-in-out;
+  margin-top: 4.8rem;
+  transition: all 500ms ease-in;
+  z-index: 0;
 }
